tests/e2e/function_call_no_function.error
Error: syntax error in story at line 4, column 1

4|    nam (key: 2)
      ^^^

E0112: Function `nam` has not been declared
